# monet-theming-bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle  install.sh  module.prop  settings.gradle
.github/workflows/: build.yml
docs/: api-reference.md  integration.md
examples/demo-ui/: index.html
src/: monet_bridge.cpp
src/com/monetbridge/: BootReceiver.java  MonetBridgeService.java  MonetExtractor.java
src/main/cpp/: CMakeLists.txt
web/: monet-bridge.js  monet-theme.css
